SynProdGITV1/force-app/main/default/objects/Visit_Account__c/Visit_Account__c.object-meta.xml
<CustomObject>
    <description>To overcome limitation of not being able to created multiple look ups to the account from events - this proxy / connector object is used.</description>
    <label>Visit Account</label>
    <nameField>
        <displayFormat>VS-{0000000}</displayFormat>
        <label>Visit Account Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>