SynProdGITV1/force-app/main/default/objects/Visit_Account__c/fields/HQ_Account__c.field-meta.xml
<CustomField>
    <fullName>HQ_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup field that associates an account with a specific Headquarters (HQ) account</description>
    <label>HQ Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visit Accounts (HQ Account)</relationshipLabel>
    <relationshipName>Visit_Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>