SynProdGITV1/force-app/main/default/objects/Visit_Account__c/fields/RHQ_Account__c.field-meta.xml
<CustomField>
    <fullName>RHQ_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents the account that serves as the Regional Headquarters (RHQ) for a specific region or business unit.</description>
    <label>RHQ Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visit Accounts</relationshipLabel>
    <relationshipName>Visit_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>